lib/src/cover_crypt/generated_bindings.dart

// ignore_for_file: constant_identifier_names, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

class NativeLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibrary(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibrary.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Externally set the last error recorded on the Rust side
  ///
  /// # Safety
  /// This function is meant to be called from the Foreign Function
  /// Interface
  int set_error(
    ffi.Pointer<ffi.Char> error_message_ptr,
  ) {
    return _set_error(
      error_message_ptr,
    );
  }

  late final _set_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'set_error');
  late final _set_error =
      _set_errorPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Get the most recent error as utf-8 bytes, clearing it in the process.
  /// # Safety
  /// - `error_msg`: must be pre-allocated with a sufficient size
  int get_last_error(
    ffi.Pointer<ffi.Char> error_msg_ptr,
    ffi.Pointer<ffi.Int> error_len,
  ) {
    return _get_last_error(
      error_msg_ptr,
      error_len,
    );
  }

  late final _get_last_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>)>>('get_last_error');
  late final _get_last_error = _get_last_errorPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>)>();

  /// Generate the master authority keys for supplied Policy
  ///
  /// - `master_keys_ptr`    : Output buffer containing both master keys
  /// - `master_keys_len`    : Size of the output buffer
  /// - `policy_ptr`         : Policy to use to generate the keys
  /// # Safety
  int h_generate_master_keys(
    ffi.Pointer<ffi.Char> master_keys_ptr,
    ffi.Pointer<ffi.Int> master_keys_len,
    ffi.Pointer<ffi.Char> policy_ptr,
  ) {
    return _h_generate_master_keys(
      master_keys_ptr,
      master_keys_len,
      policy_ptr,
    );
  }

  late final _h_generate_master_keysPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>)>>('h_generate_master_keys');
  late final _h_generate_master_keys = _h_generate_master_keysPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Char>)>();

  /// Generate the user private key matching the given access policy
  ///
  /// - `user_private_key_ptr`: Output buffer containing user private key
  /// - `user_private_key_len`: Size of the output buffer
  /// - `master_private_key_ptr`: Master private key (required for this
  /// generation)
  /// - `master_private_key_len`: Master private key length
  /// - `access_policy_ptr`: Access policy of the user private key (JSON)
  /// - `policy_ptr`: Policy to use to generate the keys (JSON)
  /// # Safety
  int h_generate_user_private_key(
    ffi.Pointer<ffi.Char> user_private_key_ptr,
    ffi.Pointer<ffi.Int> user_private_key_len,
    ffi.Pointer<ffi.Char> master_private_key_ptr,
    int master_private_key_len,
    ffi.Pointer<ffi.Char> access_policy_ptr,
    ffi.Pointer<ffi.Char> policy_ptr,
  ) {
    return _h_generate_user_private_key(
      user_private_key_ptr,
      user_private_key_len,
      master_private_key_ptr,
      master_private_key_len,
      access_policy_ptr,
      policy_ptr,
    );
  }

  late final _h_generate_user_private_keyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('h_generate_user_private_key');
  late final _h_generate_user_private_key =
      _h_generate_user_private_keyPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  /// Rotate the attributes of the given policy
  ///
  /// - `updated_policy_ptr`: Output buffer containing new policy
  /// - `updated_policy_len`: Size of the output buffer
  /// - `attributes_ptr`: Attributes to rotate (JSON)
  /// - `policy_ptr`: Policy to use to generate the keys (JSON)
  /// # Safety
  int h_rotate_attributes(
    ffi.Pointer<ffi.Char> updated_policy_ptr,
    ffi.Pointer<ffi.Int> updated_policy_len,
    ffi.Pointer<ffi.Char> attributes_ptr,
    ffi.Pointer<ffi.Char> policy_ptr,
  ) {
    return _h_rotate_attributes(
      updated_policy_ptr,
      updated_policy_len,
      attributes_ptr,
      policy_ptr,
    );
  }

  late final _h_rotate_attributesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('h_rotate_attributes');
  late final _h_rotate_attributes = _h_rotate_attributesPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Update the master keys according to this new policy.
  ///
  /// When a partition exists in the new policy but not in the master keys,
  /// a new keypair is added to the master keys for that partition.
  /// When a partition exists on the master keys, but not in the new policy,
  /// it is removed from the master keys.
  ///
  /// - `updated_master_private_key_ptr`: Output buffer containing the updated master private key
  /// - `updated_master_private_key_len`: Size of the updated master private key output buffer
  /// - `updated_master_public_key_ptr`: Output buffer containing the updated master public key
  /// - `updated_master_public_key_len`: Size of the updated master public key output buffer
  /// - `current_master_private_key_ptr`: current master private key
  /// - `current_master_private_key_len`: current master private key length
  /// - `current_master_public_key_ptr`: current master public key
  /// - `current_master_public_key_len`: current master public key length
  /// - `policy_ptr`: Policy to use to update the master keys (JSON)
  /// # Safety
  int h_update_master_keys(
    ffi.Pointer<ffi.Char> updated_master_private_key_ptr,
    ffi.Pointer<ffi.Int> updated_master_private_key_len,
    ffi.Pointer<ffi.Char> updated_master_public_key_ptr,
    ffi.Pointer<ffi.Int> updated_master_public_key_len,
    ffi.Pointer<ffi.Char> current_master_private_key_ptr,
    int current_master_private_key_len,
    ffi.Pointer<ffi.Char> current_master_public_key_ptr,
    int current_master_public_key_len,
    ffi.Pointer<ffi.Char> policy_ptr,
  ) {
    return _h_update_master_keys(
      updated_master_private_key_ptr,
      updated_master_private_key_len,
      updated_master_public_key_ptr,
      updated_master_public_key_len,
      current_master_private_key_ptr,
      current_master_private_key_len,
      current_master_public_key_ptr,
      current_master_public_key_len,
      policy_ptr,
    );
  }

  late final _h_update_master_keysPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>)>>('h_update_master_keys');
  late final _h_update_master_keys = _h_update_master_keysPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>)>();

  /// Refresh the user key according to the given master key and access policy.
  ///
  /// The user key will be granted access to the current partitions, as determined by its access policy.
  /// If preserve_old_partitions is set, the user access to rotated partitions will be preserved
  ///
  /// - `updated_user_private_key_ptr`: Output buffer containing the updated user private key
  /// - `updated_user_private_key_len`: Size of the updated user private key output buffer
  /// - `master_private_key_ptr`: master private key
  /// - `master_private_key_len`: master private key length
  /// - `current_user_private_key_ptr`: current user private key
  /// - `current_user_private_key_len`: current user private key length
  /// - `access_policy_ptr`: Access policy of the user private key (JSON)
  /// - `policy_ptr`: Policy to use to update the master keys (JSON)
  /// - `preserve_old_partitions_access`: set to 1 to preserve the user access to the rotated partitions
  /// # Safety
  int h_refresh_user_private_key(
    ffi.Pointer<ffi.Char> updated_user_private_key_ptr,
    ffi.Pointer<ffi.Int> updated_user_private_key_len,
    ffi.Pointer<ffi.Char> master_private_key_ptr,
    int master_private_key_len,
    ffi.Pointer<ffi.Char> current_user_private_key_ptr,
    int current_user_private_key_len,
    ffi.Pointer<ffi.Char> access_policy_ptr,
    ffi.Pointer<ffi.Char> policy_ptr,
    int preserve_old_partitions_access,
  ) {
    return _h_refresh_user_private_key(
      updated_user_private_key_ptr,
      updated_user_private_key_len,
      master_private_key_ptr,
      master_private_key_len,
      current_user_private_key_ptr,
      current_user_private_key_len,
      access_policy_ptr,
      policy_ptr,
      preserve_old_partitions_access,
    );
  }

  late final _h_refresh_user_private_keyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int)>>('h_refresh_user_private_key');
  late final _h_refresh_user_private_key =
      _h_refresh_user_private_keyPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int)>();

  /// Create a cache of the Public Key and Policy which can be re-used
  /// when encrypting multiple messages. This avoids having to re-instantiate
  /// the public key on the Rust side on every encryption which is costly.
  ///
  /// This method is to be used in conjunction with
  /// h_aes_encrypt_header_using_cache
  ///
  /// WARN: h_aes_destroy_encrypt_cache() should be called
  /// to reclaim the memory of the cache when done
  /// # Safety
  int h_aes_create_encryption_cache(
    ffi.Pointer<ffi.Int> cache_handle,
    ffi.Pointer<ffi.Char> policy_ptr,
    ffi.Pointer<ffi.Char> public_key_ptr,
    int public_key_len,
  ) {
    return _h_aes_create_encryption_cache(
      cache_handle,
      policy_ptr,
      public_key_ptr,
      public_key_len,
    );
  }
